--- a/assets/style.css
+++ b/assets/style.css
@@ -5,9 +5,10 @@ body {
     background-color: #edebe6;
     color: #636363;
     line-height: 27px;
-    font-size: 18px;
+    font-size: 15px;
     width: 100%;
     height: 100%;
+    font-family: sans-serif;
 }
 a {
     text-decoration: none;
@@ -17,6 +18,7 @@ div.header {
     margin-bottom: 20px;
     font-size: 34px;
     margin: 30px 0;
+    font-family: "Linux Libertine",Georgia,Times,serif;
 }
 
 div.article {
