--- a/assets/style.css
+++ b/assets/style.css
@@ -14,11 +14,22 @@ a {
     text-decoration: none;
     color: #2090C0;
 }
-div.header {
+q {
+    border: 1px solid rgba(0, 128, 0, 0.25);
+    background-color: rgba(0, 128, 0, 0.1);
+    border-radius: 5px;
+    padding: 7px;
+}
+div.header, h1 {
     margin-bottom: 20px;
     font-size: 34px;
     margin: 30px 0;
     font-family: "Linux Libertine",Georgia,Times,serif;
+    font-weight: normal;
+}
+h2, h3, h4, h5, h6 {
+    font-family: "Linux Libertine",Georgia,Times,serif;
+    font-weight: normal;
 }
 
 div.article {
